--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hi</title>
+	<title>hi!</title>
 </head>
 <body>
-<h1>Welcome</h1>
+<h1>Welcome!</h1>
 </body>
 </html>
